individual project gap issue fixed

--- a/public/css/individual.css
+++ b/public/css/individual.css
@@ -38,7 +38,7 @@ nav {
 } */
 
 .mySwiper .swiper-slide {
-    width: 25%;
+    width: 25%!important;
     height: 100%;
     opacity: 0.4;
 }
